--- a/.github/workflows/nonproduction.yaml
+++ b/.github/workflows/nonproduction.yaml
@@ -1,4 +1,4 @@
-name: Deploy feature branches to nonproduction bucket
+name: Deploy feature branches to nonproduction
 
 on:
   push:
@@ -6,27 +6,28 @@ on:
       - feature*
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     env:
-      BUCKET_NAME: cfst-3457-7becedca8f1dca384eab0ecfe-nonprodbucket-1tidliso3nh0z 
+      BUCKET_NAME: cfst-3457-7becedca8f1dca384eab0ecfe-nonprodbucket-1tidliso3nh0z
     steps:
-      - name: Check out code
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: configure aws cli
-        uses: actions/configure-aws-credentials@v1
+      - name: Configure AWS cli
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-      - name: set up node.js
+      - name: Use Node.js
         uses: actions/setup-node@v2
         with:
           node-version: 14
-      - name: build site
+      - name: Build
         run: |
           npm ci
           npm run build
-      - name: deploy files to bucket
-        run: aws s3 cp public s3://${{ env.BUCKET_NAME }} --recursive --acl public-read
+      - name: Deploy bundle to bucket
+        run: |
+            echo 'copying files to s3 bucket'
+            aws s3 cp public s3://${{ env.BUCKET_NAME }}/ --recursive --acl public-read
